--- a/_config.yml
+++ b/_config.yml
@@ -79,5 +79,5 @@ theme: landscape
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
   type: git
-  repo: git@github.com:FredZeng/FredZeng.github.io.git
+  repo: https://github.com/FredZeng/FredZeng.github.io.git
   branch: master
