--- a/_config.yml
+++ b/_config.yml
@@ -73,7 +73,12 @@ pagination_dir: page
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
+mode: default
 theme: even
+toc: true
+since: 2019
+social:
+  github: https://github.com/FredZeng
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
