--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "scripts": {
     "serve": "hexo s -o",
+    "build-only": "hexo generate && gulp build",
     "prebuild": "hexo clean",
     "build": "hexo g && gulp build",
     "postbuild": "hexo d"
