--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ timezone:
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: https://fredzeng.github.io
+url: https://cdn.jsdelivr.net/gh/FredZeng/FredZeng.github.io@master
 root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
