feat(_config.yml): show theme menu

--- a/_config.yml
+++ b/_config.yml
@@ -80,6 +80,9 @@ mode: default
 theme: even
 toc: true
 since: 2019
+menu:
+  Home: /
+  Archives: /archives/
 social:
   github: https://github.com/FredZeng
 
