--- a/_config.yml
+++ b/_config.yml
@@ -43,7 +43,7 @@ highlight:
   line_number: true
   auto_detect: false
   tab_replace:
-  
+
 # Home page setting
 # path: Root path for your blogs index page. (default = '')
 # per_page: Posts displayed per page. (0 = disable pagination)
@@ -52,7 +52,7 @@ index_generator:
   path: ''
   per_page: 10
   order_by: -date
-  
+
 # Category & Tag
 default_category: uncategorized
 category_map:
@@ -83,6 +83,7 @@ since: 2019
 menu:
   Home: /
   Archives: /archives/
+  Tags: /tags/
 social:
   github: https://github.com/FredZeng
 
