chore: fix categories 404

--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,8 @@ since: 2019
 menu:
   Home: /
   Archives: /archives/
-  Tags: /tags/
+  Categories: /categories/
+  # Tags: /tags/
 social:
   github: https://github.com/FredZeng
 
