--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,7 +5,7 @@ on:
       - master
 jobs:
   deploy:
-    runs-on: macos-latest
+    runs-on: macos-12
     steps:
       - name: Check out Git repository
         uses: actions/checkout@v2
@@ -13,7 +13,7 @@ jobs:
       - name: Install Node.js, NPM and Yarn
         uses: actions/setup-node@v2
         with:
-          node-version: '16'
+          node-version: '12.22.0'
 
       - name: Cache NPM dependencies
         uses: actions/cache@v2
